--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "cpe231-nsfw-express",
   "version": "1.0.0",
   "description": "KMUTT CPE231 Database Systems Course Project for NSFW Banking Systems Backend with ExpressJS Framework",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
